--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bayesrules
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Datasets and Supplemental Functions for Bayes Rules! Book
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
