--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,9 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/mdogucu/bayesrules
 BugReports: https://github.com/mdogucu/bayesrules/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: 
+    ggplot2
