--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: bayesrules
 Type: Package
-Title: Datasets and Supplemental Functions for Bayes Rules! Book
+Title: Datasets and Supplemental Functions from Bayes Rules! Book
 Version: 0.1.0
 Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: Mine Dogucu <mdogucu@uci.edu>
+Description: Provides datasets and functions used for analysis 
+  and visualizations in the Bayes Rules! book.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 URL: https://github.com/mdogucu/bayesrules
 BugReports: https://github.com/mdogucu/bayesrules/issues
 Suggests: 
