--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(plot_beta)
 export(plot_beta_binomial)
+export(plot_binomial_likelihood)
 export(plot_poisson_gamma)
 export(summarize_beta)
 export(summarize_beta_binomial)
 import(ggplot2)
+import(magrittr)
