--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,14 @@ Package: bayesrules
 Type: Package
 Title: Datasets and Supplemental Functions from Bayes Rules! Book
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Mine Dogucu <mdogucu@uci.edu>
+Authors@R: c(
+    person("Mine", "Dogucu", , "mdogucu@uci.edu", c("aut", "cre")),
+    person("Alicia", "Johnson", , role = "aut"),
+    person("Miles", "Ott", , role = "aut")
+    )
 Description: Provides datasets and functions used for analysis 
   and visualizations in the Bayes Rules! book.
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
