--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(plot_beta)
 export(plot_beta_binomial)
 export(plot_binomial_likelihood)
+export(plot_gamma)
 export(plot_poisson_gamma)
 export(summarize_beta)
 export(summarize_beta_binomial)
