--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(plot_gamma)
 export(plot_poisson_gamma)
 export(summarize_beta)
 export(summarize_beta_binomial)
+export(summarize_poisson_gamma)
 import(ggplot2)
 import(magrittr)
