--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(plot_beta_binomial)
 export(plot_binomial_likelihood)
 export(plot_gamma)
 export(plot_poisson_gamma)
+export(plot_poisson_likelihood)
 export(summarize_beta)
 export(summarize_beta_binomial)
 export(summarize_poisson_gamma)
