change from Poisson gamma wording to Gamma-Poisson to reflect the textbook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export(plot_beta)
 export(plot_beta_binomial)
 export(plot_binomial_likelihood)
 export(plot_gamma)
-export(plot_poisson_gamma)
+export(plot_gamma_poisson)
 export(plot_poisson_likelihood)
 export(summarize_beta)
 export(summarize_beta_binomial)
-export(summarize_poisson_gamma)
+export(summarize_gamma_poisson)
 import(ggplot2)
 import(magrittr)
