--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_gamma)
 export(plot_gamma_poisson)
 export(plot_normal)
 export(plot_poisson_likelihood)
+export(prediction_summary)
 export(summarize_beta)
 export(summarize_beta_binomial)
 export(summarize_gamma_poisson)
