--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(plot_poisson_likelihood)
 export(prediction_summary)
 export(summarize_beta)
 export(summarize_beta_binomial)
+export(summarize_gamma)
 export(summarize_gamma_poisson)
 export(summarize_normal_normal)
 import(ggplot2)
 import(magrittr)
+importFrom(dplyr,filter)
