--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_gamma_poisson)
 export(plot_normal)
 export(plot_poisson_likelihood)
 export(prediction_summary)
+export(sample_mode)
 export(summarize_beta)
 export(summarize_beta_binomial)
 export(summarize_gamma)
