--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_binomial_likelihood)
 export(plot_gamma)
 export(plot_gamma_poisson)
 export(plot_normal)
+export(plot_normal_normal)
 export(plot_poisson_likelihood)
 export(prediction_summary)
 export(sample_mode)
