--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(summarize_beta_binomial)
 export(summarize_gamma)
 export(summarize_gamma_poisson)
 export(summarize_normal_normal)
+import(dplyr)
 import(ggplot2)
+import(janitor)
 import(magrittr)
 importFrom(dplyr,filter)
