clean up conjugate family functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,11 @@ export(summarize_normal_normal)
 import(dplyr)
 import(ggplot2)
 import(janitor)
-import(magrittr)
 importFrom(dplyr,filter)
+importFrom(magrittr,"%>%")
 importFrom(purrr,map_df)
 importFrom(stats,dbeta)
+importFrom(stats,dbinom)
+importFrom(stats,dgamma)
+importFrom(stats,dnorm)
+importFrom(stats,qgamma)
