--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,24 @@ import(dplyr)
 import(ggplot2)
 import(janitor)
 importFrom(dplyr,filter)
+importFrom(e1071,naiveBayes)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_df)
+importFrom(rstanarm,posterior_predict)
+importFrom(stats,as.formula)
 importFrom(stats,dbeta)
 importFrom(stats,dbinom)
+importFrom(stats,density)
 importFrom(stats,dgamma)
 importFrom(stats,dnorm)
+importFrom(stats,integrate)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,predict)
+importFrom(stats,qbeta)
 importFrom(stats,qgamma)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,update)
