--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,11 @@ export(summarize_gamma_poisson)
 export(summarize_normal_normal)
 import(dplyr)
 import(ggplot2)
+import(groupdata2)
 import(janitor)
 importFrom(dplyr,filter)
 importFrom(e1071,naiveBayes)
+importFrom(groupdata2,fold)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_df)
 importFrom(rstanarm,posterior_predict)
