--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Datasets and Supplemental Functions from Bayes Rules! Book
 Version: 0.0.0.9000
 Authors@R: c(
     person("Mine", "Dogucu", , "mdogucu@uci.edu", c("aut", "cre"), comment = c(ORCID = "0000-0002-8007-934X")),
-    person("Alicia", "Johnson", , role = "aut", comment = c(ORCID = "0000-0003-4457-6565")),
-    person("Miles", "Ott", , role = "aut")
+    person("Alicia", "Johnson", , role = "aut"),
+    person("Miles", "Ott", , role = "aut", comment = c(ORCID = "0000-0003-4457-6565"))
     )
 Description: Provides datasets and functions used for analysis 
   and visualizations in the Bayes Rules! book.
