--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Datasets and Supplemental Functions from Bayes Rules! Book
 Version: 0.0.1
 Authors@R: c(
-    person("Mine", "Dogucu", , "mdogucu@uci.edu", c("aut", "cre"), comment = c(ORCID = "0000-0002-8007-934X")),
+    person("Mine", "Dogucu", , "mdogucu@gmail.com", c("aut", "cre"), comment = c(ORCID = "0000-0002-8007-934X")),
     person("Alicia", "Johnson", , role = "aut"),
     person("Miles", "Ott", , role = "aut", comment = c(ORCID = "0000-0003-4457-6565"))
     )
